--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-body, html {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+body,
+html {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
